force-app/main/default/objects/Account/fields/ARBT_Oct18_Text__c.field-meta.xml
<CustomField>
    <fullName>ARBT_Oct18_Text__c</fullName>
    <label>AutoRABIT_Oct18_Text</label>
    <length>15</length>
    <type>Text</type>
</CustomField>