force-app/main/default/objects/Account/fields/ARBT_Oct_18_Date__c.field-meta.xml
<CustomField>
    <fullName>ARBT_Oct_18_Date__c</fullName>
    <label>ARBT_Oct_18_Date</label>
    <type>Date</type>
</CustomField>