force-app/main/default/objects/Account/fields/Autorabbit_Date_By_Mani__c.field-meta.xml
<CustomField>
    <fullName>Autorabbit_Date_By_Mani__c</fullName>
    <label>Autorabbit Date By Mani</label>
    <type>Date</type>
</CustomField>