force-app/main/default/objects/Account/fields/Autorabbit_Email_By_Mani__c.field-meta.xml
<CustomField>
    <fullName>Autorabbit_Email_By_Mani__c</fullName>
    <label>Autorabbit Email By Mani</label>
    <type>Email</type>
</CustomField>