force-app/main/default/objects/Account/fields/Autorabbit_Num_By_Mani__c.field-meta.xml
<CustomField>
    <fullName>Autorabbit_Num_By_Mani__c</fullName>
    <label>Autorabbit Num By Mani</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>