force-app/main/default/objects/Account/fields/AutoRabitField__c.field-meta.xml
<CustomField>
    <fullName>AutoRabitField__c</fullName>
    <label>AutoRabitField</label>
    <length>25</length>
    <type>Text</type>
</CustomField>