force-app/main/default/objects/Account/fields/AzureOrgDeploy__c.field-meta.xml
<CustomField>
    <fullName>AzureOrgDeploy__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AzureOrgDeploy</label>
    <type>Checkbox</type>
</CustomField>