force-app/main/default/objects/Account/fields/BitBucket_Field1__c.field-meta.xml
<CustomField>
    <fullName>BitBucket_Field1__c</fullName>
    <label>BitBucket_Field1</label>
    <type>Email</type>
</CustomField>