force-app/main/default/objects/Account/fields/BitBucket_Field2__c.field-meta.xml
<CustomField>
    <fullName>BitBucket_Field2__c</fullName>
    <label>BitBucket_Field2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>