force-app/main/default/objects/Account/fields/BitBucket_Field3__c.field-meta.xml
<CustomField>
    <fullName>BitBucket_Field3__c</fullName>
    <label>BitBucket_Field3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>