force-app/main/default/objects/Account/fields/Custom__c.field-meta.xml
<CustomField>
    <fullName>Custom__c</fullName>
    <label>Custom</label>
    <length>25</length>
    <type>Text</type>
</CustomField>