force-app/main/default/objects/Account/fields/External_Primary_Key_Identifier__c.field-meta.xml
<CustomField>
    <fullName>External_Primary_Key_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>External Primary Key Identifier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>