force-app/main/default/objects/Account/fields/GearSet2__c.field-meta.xml
<CustomField>
    <fullName>GearSet2__c</fullName>
    <label>GearSet2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>