force-app/main/default/objects/Account/fields/GearsetText__c.field-meta.xml
<CustomField>
    <fullName>GearsetText__c</fullName>
    <label>GearsetText</label>
    <length>25</length>
    <type>Text</type>
</CustomField>