force-app/main/default/objects/Account/fields/HariAzureDevops__c.field-meta.xml
<CustomField>
    <fullName>HariAzureDevops__c</fullName>
    <label>AzureDevops</label>
    <length>20</length>
    <type>Text</type>
</CustomField>