force-app/main/default/objects/Account/fields/jash_bit2__c.field-meta.xml
<CustomField>
    <fullName>jash_bit2__c</fullName>
    <label>jash bit2</label>
    <length>23</length>
    <type>Text</type>
</CustomField>