force-app/main/default/objects/Account/fields/jash_bit3__c.field-meta.xml
<CustomField>
    <fullName>jash_bit3__c</fullName>
    <label>jash bit3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>