force-app/main/default/objects/Account/fields/jash_bit_1__c.field-meta.xml
<CustomField>
    <fullName>jash_bit_1__c</fullName>
    <label>jash bit 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>