force-app/main/default/objects/Account/fields/Manideep_Bitbucket__c.field-meta.xml
<CustomField>
    <fullName>Manideep_Bitbucket__c</fullName>
    <label>Manideep Bitbucket</label>
    <type>Email</type>
</CustomField>