force-app/main/default/objects/Account/fields/Manideep_Flosum2__c.field-meta.xml
<CustomField>
    <fullName>Manideep_Flosum2__c</fullName>
    <label>Manideep Flosum2</label>
    <type>TextArea</type>
</CustomField>