force-app/main/default/objects/Account/fields/Manideep_Flosum__c.field-meta.xml
<CustomField>
    <fullName>Manideep_Flosum__c</fullName>
    <label>Manideep Flosum</label>
    <length>30</length>
    <type>Text</type>
</CustomField>