force-app/main/default/objects/Account/fields/New2410__c.field-meta.xml
<CustomField>
    <fullName>New2410__c</fullName>
    <defaultValue>true</defaultValue>
    <label>New2410</label>
    <type>Checkbox</type>
</CustomField>