force-app/main/default/objects/Account/fields/NewAzure2410__c.field-meta.xml
<CustomField>
    <fullName>NewAzure2410__c</fullName>
    <label>NewAzure2410</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>