force-app/main/default/objects/Account/fields/NewCheckBoxAR__c.field-meta.xml
<CustomField>
    <fullName>NewCheckBoxAR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewCheckBoxAR</label>
    <type>Checkbox</type>
</CustomField>