force-app/main/default/objects/Account/fields/SomanathBitBucketCHB__c.field-meta.xml
<CustomField>
    <fullName>SomanathBitBucketCHB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SomanathBitBucket</label>
    <type>Checkbox</type>
</CustomField>