force-app/main/default/objects/Account/fields/SomanathBitBucketNumber__c.field-meta.xml
<CustomField>
    <fullName>SomanathBitBucketNumber__c</fullName>
    <label>SomanathBitBucketNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>