force-app/main/default/objects/Account/fields/SomanathBitBucketText__c.field-meta.xml
<CustomField>
    <fullName>SomanathBitBucketText__c</fullName>
    <label>SomanathBitBucketText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>