force-app/main/default/objects/Account/validationRules/Phone_Number_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Check</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(TEXT( Industry ))&lt;6</errorConditionFormula>
    <errorDisplayField>Industry</errorDisplayField>
    <errorMessage>Industry Length more than 6 characters</errorMessage>
</ValidationRule>